--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="C:\Users\volch\Downloads\ofont.ru_Onest.ttf">
         <meta charset="utf-8" />
         <link rel="stylesheet" href="globals.css" />
         <link rel="stylesheet" href="styleguide.css" />
         <link rel="stylesheet" href="style.css" />
     </head>
+    <header class="header">
+      <div class="overlap">
+          <img class="rectangle" src="img/rectangle 1034.png" />
+          <a href="https://www.instagram.com" target="_blank">
+            <img class="skill-icons" src="img/skill-icons-instagram.svg" />
+          </a>
+          
+          <div class="box">
+              <div class="group"> 
+                  <img class="img" src="img/chelovek.svg" />
+              </div>
+              <div class="group-2">
+                  <div class="rectangle-2"></div>
+                  <div class="rectangle-3"></div>
+                  <div class="rectangle-4"></div>
+              </div>
+              <img class="solar-cart-line" src="img/solar_cart-line-duotone.svg" />
+              <div class="component">
+                  <div class="text-wrapper">Search</div>
+                  <img class="ic-twotone-search" src="img/ic-twotone-search.svg" />
+              </div>
+              <div class="div-wrapper"><div class="text-wrapper-2">Войти</div></div>
+          </div>
+      </div>
+  </header>
+  
     <body>
         <div class="desktop">
             <div class="div">
-                <div class="overlap">
-                    <img class="rectangle" src="img/rectangle 1034.png" />
-                    <img class="skill-icons" src="img/skill-icons-instagram.svg" />
-                    <div class="box">
-                      <div class="group"> 
-                      <img class="img" src="img/Group 5557.svg" />
-                      </div>
-                    <div class="group-2">
-                        <div class="rectangle-2"></div>
-                        <div class="rectangle-3"></div>
-                        <div class="rectangle-4"></div>
-                    </div>
-                    <img class="solar-cart-line" src="img/solar_cart-line-duotone.svg" />
-                    <div class="component">
-                        <div class="text-wrapper">Search</div>
-                        <img class="ic-twotone-search" src="img/ic-twotone-search.svg" />
-                    </div>
-                    <div class="div-wrapper"><div class="text-wrapper-2">Войти</div></div>
-                </div>
                 <img class="rectangle-5" src="img/rectangle 1032.png" />
                 <div class="rectangle-6"></div>
                 <div class="overlap-group">
