--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
               <div class="group"> 
                   <img class="img" src="img/chelovek.svg" />
               </div>
-              <div class="group-2">
+              <div class="menu">
                   <div class="rectangle-2"></div>
                   <div class="rectangle-3"></div>
                   <div class="rectangle-4"></div>
               </div>
               <img class="solar-cart-line" src="img/solar_cart-line-duotone.svg" />
               <div class="component">
-                  <div class="text-wrapper">Search</div>
-                  <img class="ic-twotone-search" src="img/ic-twotone-search.svg" />
+                  <input type="text" placeholder="Search" />
+                  <img class="searchimg" src="img/search.svg" />
               </div>
               <div class="div-wrapper"><div class="text-wrapper-2">Войти</div></div>
           </div>
@@ -33,6 +33,7 @@
   </header>
   
     <body>
+      <div class="container">
         <div class="desktop">
             <div class="div">
                 <img class="rectangle-5" src="img/rectangle 1032.png" />
@@ -80,5 +81,6 @@
                 </div>
             </div>
         </div>
+      </div>
     </body>
 </html>
